@@ -1,9 +1,13 @@
+2007-04-03  Michael Albinus  <michael.albinus@gmx.de>
+
+	* trampver.texi.in: Set default value of `emacsgw'.
+
 2007-04-02  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Frequently Asked Questions): Extend recent files
 	example to the XEmacs case.
 
-2007-03-31  Michael Albinus  <albinus@arthur>
+2007-03-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Frequently Asked Questions): Add recentf to
 	approaches shortening Tramp file names to be typed.
